src/main/java/org/example/hanmo/error/exception/BadRequestException.java
package org.example.hanmo.error.exception;


import org.example.hanmo.error.ErrorCode;

public class BadRequestException extends BusinessException {

    public BadRequestException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}